# GEI-NJ

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: API.html  Tutorial_GEI_NJ.html
src/gei_nj/: __init__.py  construct_nj.py  process_data.py
