[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gei-nj"
version = "0.1.0"
description = "Utilities for processing SNV AnnData objects and constructing NJ trees."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "GEI-NJ authors" }
]
keywords = ["single-cell", "SNV", "AnnData", "neighbor-joining", "bioinformatics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "anndata",
  "biopython",
  "matplotlib",
  "numpy",
  "pandas",
  "scipy",
]

[project.urls]
Homepage = "https://github.com/your-username/gei-nj"
Repository = "https://github.com/your-username/gei-nj"
Issues = "https://github.com/your-username/gei-nj/issues"

[tool.setuptools.packages.find]
where = ["src"]
